[gd_scene load_steps=28 format=3 uid="uid://dcb43qqae8jf2"]

[ext_resource type="Texture2D" uid="uid://c26tp7faut401" path="res://Menus/UI_Assets/Backgrounds/BackgroundA.png" id="1_4nj2v"]
[ext_resource type="Script" path="res://Menus/LevelList.gd" id="1_15o4c"]
[ext_resource type="Texture2D" uid="uid://cere3eebcxnfe" path="res://Menus/UI_Assets/Titles/Levels.png" id="2_2s0i4"]
[ext_resource type="Texture2D" uid="uid://dg5010ktyvixd" path="res://Menus/UI_Assets/Buttons/Levels/Level1Active.png" id="3_xuvu7"]
[ext_resource type="Texture2D" uid="uid://ct51h41u4io70" path="res://Menus/UI_Assets/Buttons/Levels/Level2Active.png" id="4_56jmp"]
[ext_resource type="Texture2D" uid="uid://ccnwhglo2par3" path="res://Menus/UI_Assets/Buttons/Levels/Level3Active.png" id="5_n04nv"]
[ext_resource type="Texture2D" uid="uid://ed0d2r3qacj4" path="res://Menus/UI_Assets/Buttons/BackButton.png" id="6_jg7o8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wm6wj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uryc7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ivv2g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bvooy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hartf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tc87g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lbg0r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8prp6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kpu2e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gn0qo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dvq32"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wx7dk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_og6mo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_moopt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_43diw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b18lh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_orjo0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mkp6g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5mhae"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wf8ow"]

[node name="LevelList" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_15o4c")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 800.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.32)
texture = ExtResource("1_4nj2v")

[node name="Title" type="TextureRect" parent="."]
offset_left = 55.0
offset_top = 6.0
offset_right = 247.0
offset_bottom = 70.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_2s0i4")

[node name="Level1" type="Button" parent="."]
offset_left = 13.0
offset_top = 43.0
offset_right = 205.0
offset_bottom = 235.0
scale = Vector2(0.2, 0.2)
theme_override_styles/normal = SubResource("StyleBoxEmpty_wm6wj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_uryc7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ivv2g")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bvooy")
theme_override_styles/focus = SubResource("StyleBoxEmpty_hartf")
icon = ExtResource("3_xuvu7")

[node name="Level2" type="Button" parent="."]
offset_left = 61.0
offset_top = 43.0
offset_right = 253.0
offset_bottom = 235.0
scale = Vector2(0.2, 0.2)
theme_override_styles/normal = SubResource("StyleBoxEmpty_tc87g")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lbg0r")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_8prp6")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_kpu2e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gn0qo")
icon = ExtResource("4_56jmp")

[node name="Level3" type="Button" parent="."]
offset_left = 109.0
offset_top = 43.0
offset_right = 301.0
offset_bottom = 235.0
scale = Vector2(0.2, 0.2)
theme_override_styles/normal = SubResource("StyleBoxEmpty_dvq32")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wx7dk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_og6mo")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_moopt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_43diw")
icon = ExtResource("5_n04nv")

[node name="BackButton" type="Button" parent="."]
offset_left = 61.0
offset_top = 132.0
offset_right = 253.0
offset_bottom = 196.0
scale = Vector2(0.2, 0.2)
theme_override_styles/normal = SubResource("StyleBoxEmpty_b18lh")
theme_override_styles/hover = SubResource("StyleBoxEmpty_orjo0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mkp6g")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_5mhae")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wf8ow")
icon = ExtResource("6_jg7o8")

[connection signal="mouse_entered" from="Level1" to="." method="_on_1_button_mouse_entered"]
[connection signal="mouse_exited" from="Level1" to="." method="_on_1_button_mouse_exited"]
[connection signal="pressed" from="Level1" to="." method="_on_1_pressed"]
[connection signal="mouse_entered" from="Level2" to="." method="_on_2_button_mouse_entered"]
[connection signal="mouse_exited" from="Level2" to="." method="_on_2_button_mouse_exited"]
[connection signal="pressed" from="Level2" to="." method="_on_2_pressed"]
[connection signal="mouse_entered" from="Level3" to="." method="_on_3_button_mouse_entered"]
[connection signal="mouse_exited" from="Level3" to="." method="_on_3_button_mouse_exited"]
[connection signal="pressed" from="Level3" to="." method="_on_3_pressed"]
[connection signal="mouse_entered" from="BackButton" to="." method="_on_back_button_mouse_entered"]
[connection signal="mouse_exited" from="BackButton" to="." method="_on_back_button_mouse_exited"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_pressed"]
